--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       args:
-        SECRET_KEY: ${SECRET_KEY}
+        SECRET_KEY: env.str("SECRET_KEY")
     env_file: .env
     volumes:
       - ./:/opt/webapp
@@ -13,7 +13,7 @@ services:
       - "8000:${PORT}"
   postgres:
     environment:
-      POSTGRES_PASSWORD: <postgres_pwd>
+      POSTGRES_PASSWORD: '123321123'
     volumes:
       - ./postgres-data/postgres:/var/lib/postgresql/data
     ports:
