--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       args:
-        SECRET_KEY: env.str("SECRET_KEY")
+        SECRET_KEY: ${SECRET_KEY}
     env_file: .env
     volumes:
       - ./:/opt/webapp
