--- a/Pipfile
+++ b/Pipfile
@@ -19,7 +19,6 @@ whitenoise = "~=5.2.0"
 djangorestframework = "~=3.11.1"
 django-bootstrap4 = "~=1.1.1"
 django-allauth = "~=0.42.0"
-django-rest-auth = "~=0.9.5"
 django-extensions = "~=3.1.0"
 packaging = "*"
 drf-yasg = "~=1.20.0"
@@ -27,3 +26,4 @@ drf-yasg = "~=1.20.0"
 fcm-django = "~=0.3.7"
 pyyaml = "~=5.3.1"
 django-rest-resetpassword = "*"
+django-rest-auth = "*"
