--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,14 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "axios-cache-adapter": "^2.7.3",
+    "bootstrap": "^4.6.0",
     "connected-react-router": "^6.9.1",
     "dotenv": "^8.2.0",
     "http-proxy-middleware": "^1.0.6",
+    "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
+    "node-sass": "^5.0.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
