--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -13,7 +13,8 @@ services:
       - "8000:${PORT}"
   postgres:
     environment:
-      POSTGRES_PASSWORD: <postgres_pwd>
+      POSTGRES_PASSWORD: '123321123'
+      POSTGRES_HOST_AUTH_METHOD: "trust" 
     volumes:
       - ./postgres-data/postgres:/var/lib/postgresql/data
     ports:
