--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -13,8 +13,7 @@ services:
       - "8000:${PORT}"
   postgres:
     environment:
-      POSTGRES_PASSWORD: '123321123'
-      POSTGRES_HOST_AUTH_METHOD: "trust" 
+      POSTGRES_PASSWORD: '<postgres_pwd>'
     volumes:
       - ./postgres-data/postgres:/var/lib/postgresql/data
     ports:
