--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "http-proxy-middleware": "^1.0.6",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-responsive-modal": "^6.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
